Corrected h2 top spacing throughout site

--- a/_sass/_site-body.scss
+++ b/_sass/_site-body.scss
@@ -158,7 +158,7 @@ p.excerpt {
   width:45%;
   color:#f9ddd5;
   float:left;
-  padding:3em 0 6em;
+  padding:4.5em 0 6em;
 }
 
 #portfolio-masthead-details h3 {
