--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -26,7 +26,7 @@ h1 {
   margin-bottom:.5em;
   letter-spacing:-.04em;
 }
-h2 { font-size: 1.5em; line-height:1.5em; font-weight:bold;font-family:"futura-pt", sans-serif; margin-bottom:.5em; margin-top:1.5em;} /*26/16*/
+h2 { font-size: 1.5em; line-height:1.5em; font-weight:bold;font-family:"futura-pt", sans-serif; margin-bottom:.5em; margin-top:.5em;} /*26/16*/
 h3 { font-size: 1em; line-height:1.5em; font-weight:bold; font-family:"futura-pt", sans-serif; margin-bottom:1.5em;text-transform:uppercase;} /*21/16*/
 h4 { font-size: 1.125em; line-height:1.5em;} /*18/16*/
 h5 { font-size: 1em; line-height:1.5em;} /*16/16*/
